fix(css/styles): overflow on small screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,15 +6,7 @@
   box-sizing: border-box;
 }
 
-body {
-  font-size: 16px;
-  font-family: "Source Code Pro";
-
-  background-color: #333;
-  color: white;
-}
-
-body,
+#__next,
 main {
   display: flex;
   flex-direction: column;
@@ -22,6 +14,26 @@ main {
   justify-content: center;
 
   min-height: 100vh;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Source Code Pro";
+
+  text-align: center;
+  background-color: #333;
+  color: white;
+}
+
+@media (max-width: 640px) {
+  body {
+    font-size: 12px;
+  }
+}
+
+main {
+  justify-self: center;
+  width: 80%;
 }
 
 h1 {
